<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="40dp">

            <EditText
                android:id="@+id/registerMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_mail"
                android:inputType="textEmailAddress"
                android:paddingTop="30dp"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/registerSteamId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/steam_id"
                android:inputType="number"
                android:paddingTop="30dp"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/registerNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Nickname"
                android:inputType="textPersonName"
                android:paddingTop="30dp"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:paddingTop="30dp"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/registerPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/register_password_again"
                android:inputType="textPassword"
                android:paddingTop="30dp"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>