<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/textOnS"
        android:textSize="24sp"
        android:text="Change Mail" />

    <EditText
        android:id="@+id/changeNickText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/nick_hint_one"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/textOnS"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/changeNickTextAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/nick_hint_two"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/textOnS"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/changeNickPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/password_hint_main"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/textOnS"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeNickButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/changeNickButtonDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

    </LinearLayout>
</LinearLayout>