<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="18dp"
    android:layout_marginTop="18dp"
    android:layout_marginRight="18dp"
    android:layout_marginBottom="18dp">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/textOnS"
        android:textSize="24sp"
        android:text="Change Mail"/>

    <EditText
        android:id="@+id/changeMailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/mail_hint_one"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/textOnP" />

    <EditText
        android:id="@+id/changeMailTextAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"

        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/mail_hint_two"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/textOnP" />

    <EditText
        android:id="@+id/changeMailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/password_hint_main"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/textOnP" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeMailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/changeMailButtonDissmiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/cancel_button" />
    </LinearLayout>
</LinearLayout>