<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profilNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_steam_id"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/steamIdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_point"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pointView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_premium_statu"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/premiumStatuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_list_size"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/listSizeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp" />

        <Button
            android:id="@+id/upgradeAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>