<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activitys.ItemDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell_item_name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/itemNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_count"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/itemCountDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_nick"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/itemSellerNickDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_steamid"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/itemSellerSteamIdDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_method"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/itemMethodDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_price"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/itemPriceDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/secuirtyCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/buyItemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BUY ITEM" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>