<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.SellItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/itemSellView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell_item_name"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sellName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#48CACACA"
            android:ems="10"
            android:hint='example "Dragon Claw"'
            android:inputType="textPersonName"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell_item_style"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sellStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#48CACACA"
            android:ems="10"
            android:hint='example "only cash"'
            android:inputType="textPersonName"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sell_item_price"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/sellPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#48CACACA"
            android:ems="10"
            android:hint='example "40 $/€/₺"'
            android:inputType="textPersonName"
            android:textSize="36sp" />

        <Button
            android:id="@+id/sellButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SELL ITEM" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>