<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"

                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"

                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5"
                        android:text="@string/current_item_price"
                        android:textColor="@color/textOnP" />

                    <EditText
                        android:id="@+id/itemPriceET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"

                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="0.5"
                        android:text="@string/current_item_count"
                        android:textColor="@color/textOnP" />

                    <EditText
                        android:id="@+id/itemCountET"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/selectedItemNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectedItemEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"

                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="#D2E885"
                android:text="@string/edit"
                android:textColor="@color/textOnP" />

            <Button
                android:id="@+id/selectedItemDeteleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"

                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:backgroundTint="#EA4335"
                android:text="@string/delete"
                android:textColor="@color/textOnP" />

        </LinearLayout>

        <Button
            android:id="@+id/dissmissButton"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

    </LinearLayout>

</FrameLayout>